# Skuld

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT_GATE.md  README.md  START_CHECKLIST.md  pyproject.toml  skuld  skuld_cli.py  skuld_common.py  skuld_config.py  skuld_entrypoint.py  skuld_linux.py  skuld_linux_actions.py  skuld_linux_catalog.py  skuld_linux_commands.py  skuld_linux_context.py  skuld_linux_handlers.py  skuld_linux_model.py  skuld_linux_nginx.py  skuld_linux_parser.py  skuld_linux_presenters.py  skuld_linux_registry.py  skuld_linux_runtime.py  skuld_linux_stats.py  skuld_linux_sync.py  skuld_linux_systemd.py  skuld_linux_targets.py  skuld_linux_timers.py  skuld_linux_view.py  skuld_macos.py  skuld_macos_actions.py  skuld_macos_catalog.py  skuld_macos_commands.py  skuld_macos_context.py  skuld_macos_handlers.py  skuld_macos_launchd.py  skuld_macos_model.py  skuld_macos_parser.py  (+13 more)
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
config/: doctor.json
docs/: ARCHITECTURE.md  CONTRACTS.md  DECISIONS.md  INSTALL.md  OPERATIONS.md  RELEASE.md  WISHLIST.md
scripts/: check_project_gate.py  install_git_hooks.sh  install_runtime_stats_timer.sh  project_doctor.py  run_live_smokes.sh  smoke_linux_systemd_user.sh  smoke_macos_launchd.sh
tests/: __init__.py  helpers.py  test_backend_composition.py  test_cli_runner.py  test_cli_smoke.py  test_common.py  test_config.py  test_entrypoint.py  test_linux_actions.py  test_linux_backend.py  test_linux_catalog.py  test_linux_commands.py  test_linux_model.py  test_linux_nginx.py  test_linux_sync.py  (+33 more)
(+1 files in other folders)
